# MessageYou

./: README.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml
client/: CMakeLists.txt  Main.cpp  Makefile  README.md  UsersList.cpp  UsersList.h  client.cpp  client.h  crypto_handler.cpp  crypto_handler.h  exceptions.h  readme.txt
client/client1/: me.info
client/netanel/: Utils.cpp  Utils.h
client/yafit/: me.info
server/: server.db  server.py
